# kube-data-collector

./: README.md  pyproject.toml  stats.json
conf/base/: catalog.yml  logging.yml
conf/base/parameters/: data_processor.yml  forex_collector.yml  forex_primary.yml  parameters.yml
conf/dev/: catalog.yml
docs/source/: conf.py  index.rst
k8s/: kube-infra-namespace.yaml
k8s/database/postgres/: postgres-deployment.yaml  postgres-pv-pvc.yaml  postgres-service.yaml
src/: requirements.txt  setup.py
src/kube_data_collector/: __init__.py  __main__.py  settings.py
src/kube_data_collector/pipelines/data_processor/: __init__.py  nodes.py  pipeline.py
src/kube_data_collector/pipelines/forex_collector/: README.md  __init__.py  nodes.py  pipeline.py
src/kube_data_collector/pipelines/forex_feature/: README.md  __init__.py  nodes.py  pipeline.py
src/kube_data_collector/pipelines/forex_model_input/: README.md  __init__.py  nodes.py  pipeline.py
src/kube_data_collector/pipelines/forex_primary/: README.md  __init__.py  nodes.py  pipeline.py
src/kube_data_collector/pipelines/forex_processor/: README.md  __init__.py  nodes.py  pipeline.py
src/kube_data_collector/utils/: CreateDataframe.py
src/kube_data_collector/utils/data_processing/: FetchInstruments.py  __init__.py  utils.py
src/tests/: test_run.py
src/tests/pipelines/data_processor/: test_pipeline.py
src/tests/pipelines/forex_collector/: test_pipeline.py
src/tests/pipelines/forex_feature/: test_pipeline.py
src/tests/pipelines/forex_model_input/: test_pipeline.py
(+6 files in other folders)
