# kube-data-collector/pyproject.toml

[tool.poetry]
name = "kube-data-collector"
version = "0.1.0"
description = "Financial Data Collector."
authors = ["Felipe Manrique pmanrique001@gmail.com"]
readme = "README.md"
packages = [{include = "kube_data_collector"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
kedro = ">=0.18.12,<0.19.0"
black = ">=22.0,<23.0"
flake8 = ">=3.7.9,<5.0"
ipython = {version = ">=8.10,<9.0", markers = "python_version >= \"3.8\""}
isort = ">=5.0,<6.0"
kedro-telemetry = ">=0.2.0,<0.3.0"
nbstripout = ">=0.4,<1.0"
pytest-cov = ">=3.0,<4.0"
pytest-mock = ">=1.7.1,<2.0"
pytest = ">=7.2,<8.0"
coloredlogs = "^15.0.1"
pandas = "^2.0.3"
pytz = "^2023.3"
kedro-docker = "^0.3.1"
kedro-viz = "^6.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.kedro]
package_name = "kube_data_collector"
project_name = "kube-data-collector"
kedro_init_version = "0.18.12"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/kube_data_collector -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]
